# vyper-core

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  404.html  Anchor.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  addresses.md  architecture.html  index.html  introduction.html  lifecycle.html  overview.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json  tsconfig.json
.github/workflows/: deploy-book.yml  rust-checks.yml  soteria.yml  test-rust-libs.yml  test-rust.yml  test_rust_libs.yaml
appendix/: rust_decimal_representation.html
book/: book.toml
book/src/: SUMMARY.md  architecture.md  introduction.md  lifecycle.md  overview.md
book/src/appendix/: rust_decimal_representation.md
book/src/misc/: contributors.md  libraries.md
book/src/plugins/: overview.md
book/src/vyper_core_program/: overview.md
cf-sdk/: package.json  tsconfig.json
cf-sdk/src/: castle_lending_aggregator.ts  client.ts  index.ts  types.ts
cf-sdk/src/adapters/: asset.ts  index.ts  jet.ts  port.ts  solend.ts
cf-sdk/test/: client.test.ts
libs/vyper-macros/: Cargo.toml
libs/vyper-macros/src/: lib.rs
libs/vyper-math/: Cargo.toml
libs/vyper-math/src/: bps.rs  errors.rs  lib.rs
libs/vyper-utils/: Cargo.toml
libs/vyper-utils/src/: constants.rs  errors.rs  lib.rs  rate_common.rs  redeem_logic_common.rs  token.rs
misc/: contributors.html  libraries.html
misc/proxy-lending-interface/src/: lib.rs
misc/vyper-macros/src/: lib.rs
misc/vyper-utils/: Cargo.toml
misc/vyper-utils/src/: constants.rs  lib.rs  math.rs  (+2 more)
plugins/: overview.html
plugins/rate/: overview.html  poolv2.html  switchboard.html
plugins/redeem_logic/: overview.html  vanilla_option.html
programs/mock-protocol/: Cargo.toml
programs/proxy-hyf-orca/: Cargo.toml
programs/proxy-lending-solend/: Cargo.toml
programs/proxy-lending-solend/src/: lib.rs
programs/proxy-solend/: Cargo.toml
programs/proxy-solend/src/: lib.rs
programs/rate-mock/: Cargo.toml
programs/rate-mock/src/: decimal_wrapper.rs  errors.rs  lib.rs
programs/rate-poolv2/: Cargo.toml
programs/rate-pyth/: Cargo.toml
programs/rate-pyth/src/: errors.rs  lib.rs
programs/rate-switchboard/: Cargo.toml
programs/rate-switchboard/src/: errors.rs  lib.rs
programs/rate-twap/: Cargo.toml
programs/rate-twap/src/: errors.rs  lib.rs
programs/rate-twap/src/instructions/: initialize.rs  mod.rs  refresh.rs
programs/rate-twap/src/state/: mod.rs  rate_state.rs  sample_record.rs  sampling_data.rs
programs/redeem-logic-digital/: Cargo.toml
programs/redeem-logic-farming/: Cargo.toml
programs/redeem-logic-farming/src/: lib.rs
programs/redeem-logic-fila/: Cargo.toml
programs/redeem-logic-forward/: Cargo.toml
programs/redeem-logic-lending/: Cargo.toml
programs/redeem-logic-lending-fee/: Cargo.toml
programs/redeem-logic-lending-fee/src/: lib.rs
programs/redeem-logic-lending/demo-python/: lending.py  test.py
programs/redeem-logic-lending/src/: lib.rs
programs/redeem-logic-mock/: Cargo.toml
programs/redeem-logic-settled-forward/: Cargo.toml
programs/redeem-logic-vanilla-option/: Cargo.toml
programs/redeem-logic-vanilla-option/src/: lib.rs
programs/vyper/: Cargo.toml
programs/vyper-core/: Cargo.toml
programs/vyper-core-hyf/: Cargo.toml
programs/vyper-core-hyf/src/: lib.rs
programs/vyper-core-lending/: Cargo.toml
programs/vyper-core-lending/src/: constants.rs  error.rs  inputs.rs  interface_context.rs  lib.rs  state.rs
programs/vyper-core-lending/src/adapters/: common.rs  mod.rs  solend.rs
programs/vyper-core-lending/src/instructions/: create_serum_market.rs  create_tranche.rs  deposit.rs  mod.rs  redeem.rs  update_deposited_quantity.rs  update_tranche_config.rs
programs/vyper-core/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/vyper-core/src/instructions/: close.rs  collect_fee.rs  deposit.rs  initialize.rs  mod.rs  redeem.rs  refresh_reserve_fair_value.rs  refresh_tranche_fair_value.rs  update_tranche_data.rs
programs/vyper-core/src/state/: last_update.rs  mod.rs  owner_restricted_ix_flags.rs  reserve_fair_value.rs  slot_tracking.rs  tranche_config.rs  tranche_data.rs  tranche_fair_value.rs  tranche_halt_flags.rs
programs/vyper/src/: constants.rs  error.rs  inputs.rs  lib.rs  serum.rs  state.rs  utils.rs
proxy-interface/: Cargo.toml
proxy-interface/src/: lib.rs
proxy-lending-interface/: Cargo.toml
scripts/: create_git_tag.sh  create_rate_mock_plugin.ts  create_redeem_logic_fee_plugin.ts  deploy_devnet.sh  readme.md
scripts/rate_mock/: create.ts  read_state.ts  set_fair_value.ts
scripts/rate_poolv2/: create.ts  read_state.ts  refresh.ts
scripts/rate_switchboard/: create.ts  read_aggregator.ts  read_state.ts  refresh.ts
scripts/redeem_logic_farming/: create.ts  read_state.ts  update.ts
scripts/redeem_logic_fee/: create.ts  read_state.ts
scripts/redeem_logic_lending_fee/: create.ts
scripts/redeem_logic_vanilla_option/: create.ts  read_state.ts
sdk/: .eslintrc.js  .gitignore  README.md  eslintrc.js  package.json  tsconfig.json
sdk/src/: HaltFlags.ts  LastUpdate.ts  OwnerRestrictedIxFlags.ts  Program.ts  RateMockState.ts  RedeemLogicState.ts  ReserveFairValue.ts  SlotTracking.ts  TrancheConfig.ts  TrancheData.ts  TrancheFairValue.ts  TrancheInitData.ts  UpdateTrancheConfigFlags.ts  Vyper.ts  index.ts
sdk/tests/: RateMockPlugin.ts  RateMockState.ts  RateSwitchBoardPlugin.ts  RedeemLendingPlugin.ts  RedeemLogicFarmingPlugin.ts  RedeemLogicLendingFee.ts  RedeemState.ts  RedeemVanillaOptionPlugin.ts  TrancheConfig.ts
tests/: constants.ts  mock_protocol.ts  mock_protoocl.ts  rate-mock.ts  rate-poolv2.ts  rate-pyth.ts  rate-switchboard.ts  rate-twap.ts  redeem-logic-lending.ts  utils.ts  vyper-core-lending-solend.ts  vyper-core-lending.ts  vyper-core-utils.ts  vyper-core.ts  vyper.ts
tests/sdk/: Vyper.ts
tests/serum/: utils.ts
tests/solend/: solend.ts
vyper_core_program/: overview.html
vyper_core_program/accounts/: overview.html  tranche_configuration.html
vyper_core_program/instructions/: initialize.html  overview.html
(+42 files in other folders)
