[package]
name = "vyper-utils"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vyper-protocol/vyper-core/"
homepage = "https://www.vyperprotocol.io/"
authors = ["Vyper Labs ltd"]

[lib]
crate-type = ["cdylib", "lib"]
name = "vyper_utils"

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
rust_decimal = "1.24"
rust_decimal_macros = "1.24"