[package]
name = "proxy-solend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "proxy_solend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
proxy-interface = { path = "../../proxy-interface" }
spl-token-lending = { path = "../../deps/lending-program/token-lending/program", features = ["no-entrypoint"] }
