[package]
name = "rate-pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rate_pyth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
pyth-sdk-solana = "0.6.1"
rust_decimal = { version="1.24", features=["maths", "borsh"] }
rust_decimal_macros = "1.24"