[package]
name = "redeem-logic-farming"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redeem_logic_farming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
rust_decimal = {version = "1.24", features = ["maths", "borsh"]}
rust_decimal_macros = "1.24"
vyper-utils = { path = "../../libs/vyper-utils" }
vyper-macros = { path = "../../libs/vyper-macros" }
