[package]
name = "redeem-logic-lending-fee"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redeem_logic_lending_fee"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
rust_decimal = "1.24"
vyper-utils = { path = "../../libs/vyper-utils" }
vyper-macros = { path = "../../libs/vyper-macros" }
vyper-math  = { path = "../../libs/vyper-math" }