[package]
name = "redeem-logic-lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redeem_logic_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
vyper-utils = { path = "../../misc/vyper-utils" }
vyper-macros = { path = "../../misc/vyper-macros" }
rust_decimal = "1.24"