[package]
name = "redeem-logic-lending"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"
repository = "https://github.com/vyper-protocol/vyper-core/"
homepage = "https://www.vyperprotocol.io/"
authors = ["Vyper Labs ltd"]

[lib]
crate-type = ["cdylib", "lib"]
name = "redeem_logic_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
rust_decimal = { version = "1.24", features = ["borsh"] }
rust_decimal_macros = "1.24"
vyper-utils = { path = "../../libs/vyper-utils" }
vyper-macros = { path = "../../libs/vyper-macros" }