[package]
name = "vyper-core-lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vyper_core_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = { version = "0.18.2", features = ["dex"]}
proxy-lending-interface = { path = "../../misc/proxy-lending-interface" }
vyper-utils = { path = "../../misc/vyper-utils" }

