[package]
name = "vyper-core-lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vyper_core_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = { version = "0.18.2", features = ["dex"]}
vyper-utils = { path = "../../misc/vyper-utils" }
spl-token-lending = { git = "https://github.com/vyper-protocol/solana-program-library", rev = "0c8b2707cae2df810c932dc9c470b54283e8406e", features = ["no-entrypoint"] }
