[package]
name = "vyper-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vyper_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2" }
vyper-utils = { path = "../../libs/vyper-utils" }
vyper-math = { path = "../../libs/vyper-math" }
vyper-macros = { path = "../../libs/vyper-macros" }
bitflags = "1.3"
boolinator = "2.4.0"
solana-security-txt = "1.0.1"
rust_decimal = "1.24"
rust_decimal_macros = "1.24"